--- a/wwwroot/css/clientregistration.css
+++ b/wwwroot/css/clientregistration.css
@@ -44,7 +44,8 @@
 .form-control {
   transition: all 0.3s ease;
   /* background-color: #f5f7f9; */
-  background-color: #f8f8f8;
+  background-color:rgb(242 245 251);
+  /* background-color: #f8f8f8; */
 
   font-size: 16px;
   font-weight: 400;
@@ -107,7 +108,7 @@
   font-weight: 500;
   cursor: pointer;
   transition: background 0.3s ease;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .btn-submit:hover {
@@ -153,11 +154,11 @@
   font-style: italic;
 }
 
-@media (max-width: 576px) {
-  .form-row {
+@media (max-width: 768px) {
+  /* .form-row {
     flex-direction: column;
     gap: 0;
-  }
+  } */
 
   .dob-container {
     flex-direction: column;
