--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                 </a>
             </li>
             <li>
-                <a href="@Url.Action("Index", "Home")">
+                <a href="@Url.Action("ClientDashboard", "Clients")">
                     <i class="fas fa-bell"></i>
                     <span>Remainders</span>
                 </a>
