--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,9 +1,7 @@
 @model CRM.Models.LoginViewModel
-@{
-    Layout = null;
-}
 
-<!DOCTYPE html>
+
+@* <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -16,8 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
-<body>
-    <main>
+<body> 
+    <main>*@
         <div class="login-container">
             <img src="~/images/gcfxlogo.png" alt="CRM Logo" class="login-logo" />
             <div class="login-box">
@@ -42,7 +40,7 @@
                 </form>
             </div>
         </div>
-    </main>
+    @* </main> *@
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -116,6 +114,6 @@
             });
         });
     </script>
-</body>
+@* </body>
 
-</html>
+</html> *@
