--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -80,6 +80,30 @@
                     <span>Reports</span>
                 </a>
             </li>
+            <li>
+                <a href="@Url.Action("Index", "Home")">
+                    <i class="fa fa-arrow-down" aria-hidden="true"></i>
+                    <span>Deposit</span>
+                </a>
+            </li>
+            <li>
+                <a href="@Url.Action("Index", "Home")">
+                    <i class="fa fa-arrow-up" aria-hidden="true"></i>
+                    <span>Withdraw</span>
+                </a>
+            </li>
+            <li>
+                <a href="@Url.Action("Index", "Home")">
+                    <i class="fas fa-exchange-alt"></i>
+                    <span>Transfer</span>
+                </a>
+            </li>
+            <li>
+                <a href="@Url.Action("Index", "Home")">
+                    <i class="fa fa-history" aria-hidden="true"></i>
+                    <span>Transaction History</span>
+                </a>
+            </li>
         </ul>
     </nav>
     <main>
