--- a/wwwroot/css/clientregistration.css
+++ b/wwwroot/css/clientregistration.css
@@ -29,9 +29,9 @@
   padding: 30px;
 }
 
-.form-group {
+/* .form-group {
   margin-bottom: 20px;
-}
+} */
 
 .form-group label {
   display: block;
@@ -44,7 +44,7 @@
 .form-control {
   transition: all 0.3s ease;
   /* background-color: #f5f7f9; */
-  background-color:rgb(242 245 251);
+  background-color: rgb(242 245 251);
   /* background-color: #f8f8f8; */
 
   font-size: 16px;
@@ -115,8 +115,8 @@
   background: #2980b9;
 }
 .btn-submit:disabled {
-    cursor: not-allowed;
-    opacity: 0.6; /* Optional: Dim the button for visual feedback */
+  cursor: not-allowed;
+  opacity: 0.6; /* Optional: Dim the button for visual feedback */
 }
 
 .login-link {
